tela de inicio com requisitos 1 e 2

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 .App {
-  text-align: center;
+  align-items: center;
+  background-color: rgb(20, 20, 20);
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  justify-content: space-evenly;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 80px;
   pointer-events: none;
 }
 
@@ -15,6 +20,72 @@
   border: 1px solid green;
 }
 
+.trivia-screen {
+  align-items: center;
+  background-color: rgb(15, 15, 15);
+  border-radius: 15px;
+  color: whitesmoke;
+  display: flex;
+  flex-flow: column;
+  font-size: 16px;
+  justify-content: flex-start;
+  width: 375px;
+}
+
+.form-start-screen {
+  align-items: stretch;
+  background-color: rgb(15, 15, 15);
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  margin-top: 40px;
+  text-align: left;
+}
+
+.fieldset-inputs-start-screen {
+  border: none;
+  display: flex;
+  flex-flow: column;
+  height: 150px;
+  justify-content: center;
+  width: 300px;
+}
+
+.fieldset-inputs-start-screen input {
+  margin: 10px 0 20px;
+}
+
+.fieldset-buttons-start-screen {
+  align-items: center;
+  border: none;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.btn-play {
+  align-self: center;
+  background-color: rgb(0, 128, 50);
+  border: none;
+  border-radius: 5px;
+  color: whitesmoke;
+  font-weight: 500;
+  height: 45px;
+  width: 130px;
+}
+
+.btn-settings {
+  align-self: center;
+  background-color: rgb(50, 50, 50);
+  border: none;
+  border-radius: 5px;
+  color: whitesmoke;
+  font-weight: 500;
+  height: 45px;
+  width: 130px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: shake infinite 0.82s cubic-bezier(.36,.07,.19,.97) both;
@@ -22,14 +93,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  align-items: center;
+  background-color: rgb(20, 20, 20);
+  color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  height: 30vh;
+  justify-content: center;
 }
 
 .App-link {
