Show final score and assertions on scoreboard

--- a/src/components/ScoreBoard/ScoreBoard.css
+++ b/src/components/ScoreBoard/ScoreBoard.css
@@ -1,4 +1,11 @@
 .ScoreBoard {
   display: flex;
   flex-flow: column;
+  color: white;
+  align-items: center;
+}
+
+.ScoreBoard .score {
+  font-size: 40px;
+  font-weight: 800;
 }
