--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,13 @@
 }
 
 .red-border {
-  border: 3px solid red;
   background-color: red;
+  border: 3px solid red;
 }
 
 .green-border {
-  border: 3px solid rgb(6, 240, 15);
   background-color: rgb(6, 240, 15);
+  border: 3px solid rgb(6, 240, 15)!important;
 }
 
 .trivia-screen {
