--- a/src/App.css
+++ b/src/App.css
@@ -22,73 +22,6 @@
   border: 3px solid rgb(6, 240, 15)!important;
 }
 
-.trivia-screen {
-  align-items: center;
-  background-color: rgb(15, 15, 15);
-  border: black solid 1px;
-  border-radius: 15px;
-  color: whitesmoke;
-  display: flex;
-  flex-flow: column;
-  font-size: 16px;
-  justify-content: flex-start;
-  width: 375px;
-}
-
-.form-start-screen {
-  align-items: stretch;
-  background-color: rgb(15, 15, 15);
-  display: flex;
-  flex-flow: column;
-  justify-content: space-around;
-  margin-top: 40px;
-  text-align: left;
-}
-
-.fieldset-inputs-start-screen {
-  border: none;
-  display: flex;
-  flex-flow: column;
-  height: 150px;
-  justify-content: center;
-  width: 300px;
-}
-
-.fieldset-inputs-start-screen input {
-  margin: 10px 0 20px;
-}
-
-.fieldset-buttons-start-screen {
-  align-items: center;
-  border: none;
-  display: flex;
-  flex-flow: wrap;
-  justify-content: space-around;
-  margin: 20px 0;
-}
-
-.btn-play {
-  align-self: center;
-  background-color: rgb(0, 128, 50);
-  border: none;
-  border-radius: 5px;
-  color: whitesmoke;
-  font-weight: 500;
-  height: 45px;
-  width: 130px;
-}
-
-.btn-settings {
-  align-self: center;
-  background-color: rgb(50, 27, 200);
-  border: none;
-  border-radius: 5px;
-  color: whitesmoke;
-  font-weight: 500;
-  height: 45px;
-  width: 130px;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: shake infinite 0.82s cubic-bezier(.36,.07,.19,.97) both;
@@ -100,7 +33,7 @@
   background-color: rgb(20, 20, 20);
   color: white;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   font-size: calc(10px + 2vmin);
   height: 30vh;
   justify-content: center;
